Fix stretched voices icon

--- a/src/css/_controls.scss
+++ b/src/css/_controls.scss
@@ -52,7 +52,7 @@
   select.playback-voices {
       width: 30px;
       background: transparent url("icons/voice.svg") 50% 0 no-repeat;
-      background-size: 24px 18px;
+      background-size: 18px;
   }
 
   .active {
